@@ -7,6 +7,14 @@ import com.mbserver.api.game.Player;
 
 public class MoneyManager{
 	private ArrayList<MoneyAccount>bank = new ArrayList<MoneyAccount>();
+	/**
+	 * Return if not enough money in the account
+	 */
+	public static final int NOT_ENOUGH = -1;
+	/**
+	 * Returned if the account was not found
+	 */
+	public static final int NOT_FOUND = -2;
 	
 	/**
 	 * Add a account
@@ -27,7 +35,7 @@ public class MoneyManager{
 	 * Reset the players account
 	 * 
 	 * @param p The player to reset
-	 * @return True if the account was reset False if not
+	 * @return True if the account was reset False if not found
 	 */
 	public boolean resetAccount(MoneyAccount p){
 		int ind = bank.indexOf(p);
@@ -44,44 +52,47 @@ public class MoneyManager{
 	 * 
 	 * @param p player to give
 	 * @param amount amount to give
-	 * @return if it was successful true if not false
+	 * @return 0 if successful
 	 */
-	public boolean addMoney(MoneyAccount p,int amount){
+	public int addMoney(MoneyAccount p,int amount){
 		int ind = bank.indexOf(p);
 		
 		if(ind == -1)
-			return false;
+			return MoneyManager.NOT_FOUND;
 		
 		bank.set(ind,bank.get(ind).setAmount(bank.get(ind).getAmount() + amount ));
-		return true;
+		return 0;
 	}
 	
 	/**
 	 * Remove money from player
-	 * @param p Player
+	 * @param account The players money account
 	 * @param amount amount to remove
 	 * @return
 	 */
-	public int removeMoney(MoneyAccount p,int amount){
-		int ind = bank.indexOf(p);
+	public int removeMoney(MoneyAccount account,int amount){
+		int ind = bank.indexOf(account);
 		
 		if(ind == -1)
-			return -1;
+			return MoneyManager.NOT_FOUND;
 		MoneyAccount temp = bank.get(ind);
 		
+		int preAmount = this.getMoney(account);
 		bank.set(ind,temp.setAmount(temp.getAmount() - amount));
 		
-		if(bank.get(ind).getAmount() < 0)
-			bank.set(ind,temp.setAmount(0));
+		if(bank.get(ind).getAmount() < 0){
+			bank.set(ind,temp.setAmount(preAmount));
+			return MoneyManager.NOT_ENOUGH;
+		}
 		
-		return amount;
+		return 0;
 	}
 	
-	/**Gives player infinte amount if money currently not used
+	/**Gives player infinte amount of money
 	 * 
-	 * @param p Player to set 
+	 * @param p moneyAccount to set 
 	 * @param set true or false
-	 * @return if succcessful 
+	 * @return True if successful False if moneyaccount was not found
 	 */
 	public boolean setInfinite(Player p,boolean set){
 		int ind = bank.indexOf(p);
@@ -102,12 +113,13 @@ public class MoneyManager{
 		int ind = bank.indexOf(p);
 		
 		if(ind == -1)
-			return -1;
+			return MoneyManager.NOT_FOUND;
 		
 		return bank.get(ind).getAmount();
 	}
 	
 	/**Gives money from someones account to another player
+	 * 
 	 * @param from player to take money from
 	 * @param to player to give money to
 	 * @param amount amount to give
@@ -117,17 +129,16 @@ public class MoneyManager{
 		int ind = bank.indexOf(from);
 		
 		if(ind == -1)
-			return -1;
+			return MoneyManager.NOT_FOUND;
 		
 		MoneyAccount frm = bank.get(ind);
 		
 		if(amount > frm.getAmount())
-			amount = frm.getAmount();
+			return MoneyManager.NOT_ENOUGH;
 		
 		bank.set(ind,frm.setAmount(frm.getAmount() - amount));
 		
-		addMoney(to, amount);
+		return this.addMoney(to, amount);
 		
-		return amount;
 	}
 }
